<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/framePitanje"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="9"
        app:layout_constraintStart_toEndOf="@id/navigacijaPitanja"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigacijaPitanja"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:textAlignment="center"
        app:itemHorizontalPadding="10dp"
        app:itemIconPadding="10dp"
        app:itemIconSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/framePitanje"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>


